# nutshell

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp  main.h
binaries/: appterminix
demo/: README.md  a.out  demo  demo.cpp  hello  hello.c
src/: __test.cpp  builtin.cpp  command.cpp  command.h  error.h  executor.cpp  executor.h  history.cpp  history.h  parser.cpp  parser.h  signal.h  signals.h
src/templates/: class.cpp  class.h
test/: abort.c
